// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Form Input checkbox button toggle renders correctly 1`] = `
<jest>
  <input
    aria-describedby="helperText"
    class="form-check-input btn-check"
    id="example-form-input-1"
    type="checkbox"
  />
  <label
    class="form-check-label btn btn-primary"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</jest>
`;

exports[`OE - Form Input checkbox renders correctly 1`] = `
<jest>
  <div
    class="form-check"
  >
    <input
      aria-describedby="helperText"
      class="form-check-input"
      id="example-form-input-1"
      type="checkbox"
    />
    <label
      class="form-check-label"
      for="example-form-input-1"
    >
      Example form input
    </label>
    <div
      class="invalid-feedback"
    >
      Invalid feedback example
    </div>
    <div
      class="valid-feedback"
    >
      Valid feedback example
    </div>
    <div
      class="form-text"
      id="helperText"
    >
      Helper text for the form input
    </div>
  </div>
</jest>
`;

exports[`OE - Form Input radio button toggle renders correctly 1`] = `
<jest>
  <input
    aria-describedby="helperText"
    class="form-check-input btn-check"
    id="example-form-input-1"
    type="radio"
  />
  <label
    class="form-check-label btn btn-primary"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</jest>
`;

exports[`OE - Form Input radio renders correctly 1`] = `
<jest>
  <div
    class="form-check"
  >
    <input
      aria-describedby="helperText"
      class="form-check-input"
      id="example-form-input-1"
      type="radio"
    />
    <label
      class="form-check-label"
      for="example-form-input-1"
    >
      Example form input
    </label>
    <div
      class="invalid-feedback"
    >
      Invalid feedback example
    </div>
    <div
      class="valid-feedback"
    >
      Valid feedback example
    </div>
    <div
      class="form-text"
      id="helperText"
    >
      Helper text for the form input
    </div>
  </div>
</jest>
`;

exports[`OE - Form Input range renders correctly 1`] = `
<jest>
  <label
    class="form-label"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <input
    aria-describedby="helperText"
    class="form-range"
    id="example-form-input-1"
    type="range"
  />
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</jest>
`;

exports[`OE - Form Input renders correctly 1`] = `
<jest>
  <label
    class="form-label"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <input
    aria-describedby="helperText"
    class="form-control"
    id="example-form-input-1"
    placeholder="Text here"
    type="text"
  />
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</jest>
`;

exports[`OE - Form Input renders correctly when disabled 1`] = `
<jest>
  <label
    class="form-label"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <input
    aria-describedby="helperText"
    class="form-control"
    disabled
    id="example-form-input-1"
    type="text"
  />
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</jest>
`;

exports[`OE - Form Input renders correctly when horizontal 1`] = `
<jest>
  <label
    class="col-form-label col-sm-2"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <div
    class="col-sm-10"
  >
    <input
      aria-describedby="helperText"
      class="form-control"
      id="example-form-input-1"
      type="text"
    />
  </div>
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</jest>
`;

exports[`OE - Form Input renders correctly when invalid 1`] = `
<jest>
  <label
    class="form-label"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <input
    aria-describedby="helperText"
    class="form-control is-invalid"
    id="example-form-input-1"
    type="text"
  />
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</jest>
`;

exports[`OE - Form Input renders correctly when readonly 1`] = `
<jest>
  <label
    class="form-label"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <input
    aria-describedby="helperText"
    class="form-control"
    id="example-form-input-1"
    readonly
    type="text"
  />
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</jest>
`;

exports[`OE - Form Input renders correctly when required 1`] = `
<jest>
  <label
    class="form-label"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <input
    aria-describedby="helperText"
    class="form-control"
    id="example-form-input-1"
    required
    type="text"
  />
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</jest>
`;

exports[`OE - Form Input renders correctly when valid 1`] = `
<jest>
  <label
    class="form-label"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <input
    aria-describedby="helperText"
    class="form-control is-valid"
    id="example-form-input-1"
    type="text"
  />
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</jest>
`;

exports[`OE - Form Input renders correctly with floating label 1`] = `
<jest>
  <div
    class="form-floating"
  >
    <input
      aria-describedby="helperText"
      class="form-control"
      id="example-form-input-1"
      type="text"
    />
    <label
      class="form-label"
      for="example-form-input-1"
    >
      Example form input
    </label>
    <div
      class="invalid-feedback"
    >
      Invalid feedback example
    </div>
    <div
      class="valid-feedback"
    >
      Valid feedback example
    </div>
    <div
      class="form-text"
      id="helperText"
    >
      Helper text for the form input
    </div>
  </div>
</jest>
`;

exports[`OE - Form Input switch renders correctly 1`] = `
<jest>
  <div
    class="form-check form-switch"
  >
    <input
      aria-describedby="helperText"
      class="form-check-input"
      id="example-form-input-1"
      type="checkbox"
    />
    <label
      class="form-check-label"
      for="example-form-input-1"
    >
      Example form input
    </label>
    <div
      class="invalid-feedback"
    >
      Invalid feedback example
    </div>
    <div
      class="valid-feedback"
    >
      Valid feedback example
    </div>
    <div
      class="form-text"
      id="helperText"
    >
      Helper text for the form input
    </div>
  </div>
</jest>
`;
